--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dayjs": "^1.9.6",
+    "dompurify": "^2.2.2",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
